# obscuro

./: .gitmodules  Cargo.toml  README.md  config.v4p  vhdl_ls.toml
firmware/.cargo/: config.toml
firmware/crates/ds28ea00/src/: lib.rs
firmware/crates/sequence_detector/src/: main.rs
firmware/microcontroller/: rust-toolchain.toml
firmware/microcontroller/.cargo/: config.toml
firmware/microcontroller/crates/ds28ea00/: Cargo.toml
firmware/microcontroller/crates/ds28ea00/src/: lib.rs
firmware/microcontroller/crates/sequence_detector/: Cargo.toml  build.rs
firmware/microcontroller/crates/sequence_detector/src/: main.rs
firmware/targets/Obscuro/: Makefile
firmware/targets/Obscuro/rtl/: Obscuro.vhd  OneWireSlave.vhd
firmware/targets/Obscuro/tb/: ObscuroTb.vhd  OneWireSlaveTb.vhd
gateware/targets/Obscuro/: Makefile  ruckus.tcl
gateware/targets/Obscuro/rtl/: Obscuro.vhd  Obscuro.xdc  OneWireSlave.vhd
software/obscuro/: Cargo.toml
software/obscuro-gui/: Cargo.toml
