[package]
name = "sequence_detector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-stm32 = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", features = [
    "nightly",
    "defmt",
    "stm32f103c8",
    "unstable-pac",
    "memory-x",
    "time",
    "time-driver-any",
    "unstable-traits",
    "exti",
] }
embassy-sync = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
] }
embassy-executor = { version = "0.3.3", git = "https://github.com/embassy-rs/embassy.git", features = [
    "nightly",
    "arch-cortex-m",
    "executor-thread",
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.1.5", git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "unstable-traits",
] }
embassy-futures = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git" }

# Architecture-specific
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"

embedded-hal = "1.0.0-rc.1"
nb = "1.1.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }

# Logging
defmt = "0.3.5"
defmt-rtt = "0.4.0"

# Peripherals and Drivers
one-wire-bus = { git = "https://github.com/daniel-larsen/one-wire-bus.git", version = "0.1.1" }
